--- a/getting-started/troubleshooting/common-issues.mdx
+++ b/getting-started/troubleshooting/common-issues.mdx
@@ -1,195 +1,195 @@
 ---
 title: "Troubleshooting Common Issues"
-description: "Find answers and solutions to frequently encountered issues, such as compiler errors, missing dependencies, and platform-specific quirks, to get back on track quickly."
+description: "Diagnose and resolve typical setup pitfalls, such as build errors, missing dependencies, or compiler mismatches. Gain insight into where to look for solutions and which log files or error outputs to consult."
 ---
 
 # Troubleshooting Common Issues
 
-Find answers and solutions to frequently encountered issues, such as compiler errors, missing dependencies, and platform-specific quirks, to get back on track quickly.
+GoogleTest is a powerful C++ testing framework designed for reliable and expressive automated testing. Despite its robustness, you may encounter common setup pitfalls such as build errors, missing dependencies, or configuration mismatches. This guide helps you diagnose and resolve these typical problems, pointing you to where you can find detailed error information and how to interpret it.
 
 ---
 
-## Common Compiler Errors
+## 1. Identifying Common Issues
 
-Compiler errors can often halt progress early. Here's how to identify and quickly resolve them:
+### Build Errors
+- **Symptoms:** Compilation fails or linker errors occur after integrating GoogleTest.
+- **Common Causes:**
+  - Missing or incorrect include paths for `gtest` headers.
+  - Not linking to the correct GoogleTest libraries.
+  - Using incompatible compiler versions or flags.
 
-### Error: Commas in `MOCK_METHOD` Arguments
+### Missing Dependencies
+- **Symptoms:** Errors about missing symbols, headers, or runtime components.
+- **Common Causes:**
+  - GoogleTest not built or installed properly.
+  - Environmental paths incorrectly set.
+  - Required dependency libraries or runtime components not available.
 
-When using `MOCK_METHOD`, argument or return types containing commas (such as `std::pair` or `std::map`) may cause parsing errors.
+### Compiler Mismatches
+- **Symptoms:** Unexpected behavior or failure to compile, especially with C++ standard compatibility.
+- **Common Causes:**
+  - Using a compiler that does not support C++17 or higher, as required.
+  - Mixing incompatible compiler versions between GoogleTest and your project.
 
-**Symptom:** Compilation fails with cryptic errors near the `MOCK_METHOD` macro.
+---
+
+## 2. Where to Look: Logs and Error Outputs
+
+GoogleTest and your build system provide clues to help you diagnose issues.
+
+### Build System Output
+- Review the console output of your build tool (e.g., CMake, Bazel, Make).
+- Look for missing headers, undefined references, or incompatible flags.
+
+### Compiler Error Messages
+- Carefully read the compiler errors and warnings.
+- Errors about missing files typically indicate include path issues.
+- Linker errors usually mean missing library linkage.
+
+### GoogleTest Runtime Logs
+When running tests, GoogleTest prints detailed messages:
+- Failures include the exact assertion that failed, file, and line number.
+- Errors due to misconfiguration often appear during initialization.
+- Use verbosity and flags to increase logging if needed (see next section).
+
+---
+
+## 3. Using GoogleTest Flags for Debugging
+
+GoogleTest recognizes many command-line flags and environment variables that help you debug issues.
+
+### Commonly Used Flags
+- `--gtest_list_tests`
+  - Lists all discovered tests without running them. Useful to verify test discovery.
+- `--gtest_filter=`
+  - Run only tests matching a pattern. Helpful to isolate problematic tests.
+- `--gtest_break_on_failure`
+  - Causes the debugger to break on failures, allowing inspection.
+- `--gtest_repeat=`
+  - Repeats tests multiple times to reproduce intermittent issues.
+- `--gtest_output=`
+  - Generates XML or JSON test reports for further analysis.
+
+### Setting Flags
+Example: Run all tests with break on failure enabled
+```bash
+./my_test_binary --gtest_break_on_failure
+```
+
+### Environment Variables
+You may also control behavior via environment variables:
+- `GTEST_FILTER`, `GTEST_BREAK_ON_FAILURE`, `GTEST_OUTPUT`, etc.
+
+### Help Message
+To see full flag options, run your test binary with `--help` or `--gtest_help`.
+
+---
+
+## 4. Practical Tips and Best Practices
+
+### Verify Installation
+- Confirm you've built GoogleTest from source or installed pre-built binaries correctly.
+- Ensure header files and libraries are accessible based on your build system configuration.
+
+### Consistent Compiler Use
+- Use the same compiler and standard version for your project and GoogleTest.
+- Ensure your project and GoogleTest both use C++17 or higher.
+
+### Isolate Problems
+- Use `--gtest_list_tests` to confirm tests are detected.
+- Compile and link a minimal test program.
+- Gradually add complexity to spot failure points.
+
+### Increase Verbosity
+- Use `--gtest_print_time=1` (default) to verify test execution times.
+- Use verbose logging features available in your build system or CI to capture detailed information.
+
+### Avoid Common Pitfalls
+- Do not mix GoogleTest headers from different versions.
+- Use `RUN_ALL_TESTS()` only once in your `main()`.
+- Match your test fixture classes to test suites without mixing `TEST` and `TEST_F` macros in the same suite.
+
+---
+
+## 5. Common Issues and Solutions
+
+### Issue: Compilation Fails with Missing `gtest/gtest.h`
+**Cause:** Include paths missing or GoogleTest source not properly fetched.
 
 **Solution:**
+1. Ensure you cloned the GoogleTest repository or installed it correctly.
+2. Update your build system to include the path to GoogleTest headers.
+3. When using CMake, consider using `FetchContent` or add GoogleTest as an external project.
 
-- Wrap types that contain commas in parentheses. For example:
+### Issue: Linker Errors (Undefined References to GoogleTest Symbols)
+**Cause:** Not linking against GoogleTest libraries.
 
-  ```cpp
-  // Incorrect - causes compilation error
-  MOCK_METHOD(std::pair<bool, int>, GetPair, ());
-  MOCK_METHOD(bool, CheckMap, (std::map<int, double>, bool));
+**Solution:**
+1. Add `gtest` and `gtest_main` libraries to your linker settings.
+2. Confirm the build type matches (e.g., Debug/Release).
+3. Rebuild GoogleTest with the same compiler and flags as your project.
 
-  // Correct - using parentheses to protect commas
-  MOCK_METHOD((std::pair<bool, int>), GetPair, ());
-  MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
-  ```
+### Issue: Tests Not Being Run or Detected
+**Cause:** Test filters or test registration issues.
 
-- Alternatively, define a type alias to simplify the macro usage:
+**Solution:**
+1. Use `--gtest_list_tests` to verify detection.
+2. Remove or adjust filters in `--gtest_filter` or `GTEST_FILTER` variable.
+3. Avoid naming tests or suites with underscores.
 
-  ```cpp
-  using BoolAndInt = std::pair<bool, int>;
-  using MapIntDouble = std::map<int, double>;
+### Issue: `ASSERT_*` Macros Do Not Abort Entire Test
+**Cause:** Misunderstanding of fatal failure scope.
 
-  MOCK_METHOD(BoolAndInt, GetPair, ());
-  MOCK_METHOD(bool, CheckMap, (MapIntDouble, bool));
-  ```
+**Solution:**
+- Remember `ASSERT_*` aborts the **current function only**.
+- Wrap subroutine calls with `ASSERT_NO_FATAL_FAILURE()` or check for fatal failures via `HasFatalFailure()`.
 
-This avoids direct macro parsing issues related to unprotected commas.
+### Issue: Intermittent or Flaky Tests
+**Solution:**
+- Use `--gtest_repeat=N` to rerun tests multiple times.
+- Use `--gtest_shuffle` to randomize test order and detect dependencies.
 
----
+### Issue: Test Execution Skips Unexpectedly
+**Cause:** `GTEST_SKIP()` used or setup failures.
 
-## Issues with Mocking Const and Overloaded Methods
-
-### Compiler Warnings for Const Parameters
-
-If you encounter warnings such as MSVC warnings C4301 or C4373 when mocking methods with `const` parameters, it is due to a known compiler quirk. 
-
-**Best Practice:** Remove top-level `const` qualifiers on primitive parameters in both your base and mock methods, as they are ignored by C++ and can trigger warnings.
-
-### Mocking Overloaded Methods
-
-When mocking overloaded methods, ensure you mock *all* relevant overloads to avoid compiler warnings about hidden base class methods.
-
-If you want to mock only some overloads and allow others to pass through, bring the unmocked overloads into scope with `using`:
-
-```cpp
-class MockFoo : public Foo {
- public:
-  using Foo::Add;  // Make unmocked overloads visible
-  MOCK_METHOD(int, Add, (Element x), (override));
-};
-```
+**Solution:**
+- Check `SetUp()` and `SetUpTestSuite()` implementations for skips.
+- Review skip messages printed during test runs.
 
 ---
 
-## Managing Expectations & Avoiding Common Test Pitfalls
+## 6. Troubleshooting Checklist
 
-### Uninteresting Calls Warning
-
-When a mock method is called without any `EXPECT_CALL` set, gMock prints a warning about an "uninteresting mock function call." This is normal and means your test does not specify expectations for that method.
-
-**How to handle:**
-
-- If such calls are expected and should be ignored, consider using `NiceMock` to suppress warnings:
-
-  ```cpp
-  NiceMock<MockFoo> mock_foo;
-  EXPECT_CALL(mock_foo, DoThis());  // set expectations on interesting calls
-  ```
-
-- To explicitly allow any number of calls without warnings, add a catch-all `EXPECT_CALL`:
-
-  ```cpp
-  EXPECT_CALL(mock_foo, Method(_)).Times(AnyNumber());
-  ```
-
-### Unexpected Calls and Strict Mocks
-
-Unexpected calls are calls that do not match any existing `EXPECT_CALL`.
-
-- By default, gMock treats these as errors.
-- Using `StrictMock` makes all uninteresting calls failures, tightening test validation.
-
-### Sticky Expectations
-
-Expectations remain active even after their expected call count is saturated ("sticky") unless explicitly retired with `.RetiresOnSaturation()`. This may lead to confusing errors like call count violations if not handled as intended.
-
-**Tip:** To make expectations retire automatically on saturation:
-
-```cpp
-EXPECT_CALL(mock, Foo())
-    .Times(2)
-    .RetiresOnSaturation();
-```
+- ✅ Are all required headers included and accessible?
+- ✅ Is GoogleTest built with the same compiler and standard as your project?
+- ✅ Are all necessary libraries correctly linked?
+- ✅ Are your test and suite names appropriate and consistent?
+- ✅ Do your test fixtures use the correct macros (`TEST_F` versus `TEST`)?
+- ✅ Use `--gtest_list_tests` to confirm test discovery.
+- ✅ Use `--gtest_filter` to isolate tests.
+- ✅ Review detailed error outputs and logs.
+- ✅ Incrementally build and test your integration.
 
 ---
 
-## Platform-Specific Quirks
+## 7. Getting Further Help
 
-### Virtual Destructors Required
+If the above steps do not resolve your issues:
 
-Always declare base classes with virtual destructors to avoid undefined behavior, especially when mocking. Missing a virtual destructor can cause leaks or crashes due to improper destruction.
-
-Example:
-
-```cpp
-class Foo {
- public:
-  virtual ~Foo() {}  // Must be virtual
-  virtual void Bar() = 0;
-};
-```
-
-### MSVC Macro Conflicts
-
-Windows headers sometimes define macros that clash with mock method names.
-
-**Solution:** Either:
-
-- Undefine conflicting macros before using `EXPECT_CALL` or `ON_CALL`.
-- Use alternate names.
-
-Example in tests:
-
-```cpp
-#undef Method
-EXPECT_CALL(mock, Method());
-```
+- Consult the [GoogleTest Primer](primer.md) for fundamentals of test writing.
+- Review the [Assertions Reference](reference/assertions.md) to ensure test validation is correctly expressed.
+- Explore the [Getting Started Setup Basics guides](getting-started/setup-basics) for installation and configuration details.
+- Visit the [Community Help](getting-started/troubleshooting/community-help) page for support channels.
 
 ---
 
-## Best Practices for Effective Mock Usage
+## References
 
-- Define `MOCK_METHOD` macros in the public section even if mocking private or protected methods.
-- Use `ON_CALL()` to specify default behaviors without expectations.
-- Use `EXPECT_CALL()` only to enforce that calls must occur, avoiding over-constrain tests.
-- Set expectations before exercising the mock.
-- Use sequences or `InSequence` to enforce call order explicitly.
-- When mocking methods with move-only types, provide lambdas or functors to handle the returned or passed unique pointers.
-- For complex argument matching, use matchers (`_`, `Eq()`, or custom matchers).
+- [GoogleTest Primer](primer.md)
+- [Assertions Reference](reference/assertions.md)
+- [Installation Instructions](getting-started/setup-basics/installation)
+- [Writing and Running Your First Test](getting-started/first-test-experience/writing-first-test)
 
 ---
 
-## Troubleshooting Tips
-
-### Diagnosing Expectation Failures
-
-Run tests with the flag `--gmock_verbose=info` to get detailed call matching traces with stack backtraces, helping identify why expectations fail.
-
-### Compilation Errors Related to MOCK_METHOD
-
-Ensure types with commas are wrapped or aliased as noted above. Confirm qualifiers in MOCK_METHOD match those in the base class methods.
-
-### Unexpected Call Errors
-
-Check if missing `EXPECT_CALL` or too restrictive matchers are causing calls to be unexpected. Add more permissive expectations or set catch-all expectations.
-
-### Method Not Being Mocked
-
-Verify that the method is virtual (except for Hi-perf dependency injection use cases). For non-virtuals, template-based mocking may be used instead.
-
-### Multiple EXPECT_CALL and Matching Order
-
-Remember gMock matches expectations in reverse order of specification. Put more specific expectations after the general ones to override them.
-
----
-
-## Further Resources
-
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.md) - detailed recipes and examples
-- [Legacy gMock FAQ](https://google.github.io/googletest/gmock_faq.html) - common questions and clarifications
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html) - learning tests writing basics
-- [Mocking Reference](https://google.github.io/googletest/docs/reference/mocking.html) - API documentation
-
----
-
-For more examples and explanations, visit the [GoogleMock Github Repository](https://github.com/google/googletest) to explore source code and additional tests addressing corner cases and advanced usage.
+This guide helps you make the most of GoogleTest by quickly diagnosing and addressing the typical issues that arise during setup and initial test runs. Use the incremental approach to resolve build and runtime errors, and leverage GoogleTest's rich logging and flags for effective debugging.
