--- a/guides/getting-started/first-mock.mdx
+++ b/guides/getting-started/first-mock.mdx
@@ -1,227 +1,396 @@
 ---
-title: "Creating Your First Mock Object"
-description: "A practical introduction to GoogleMock, showing how to define mock classes, set expectations, and verify interactions. Great for users eager to see mocking power in action through a realistic example."
+title: "Mocking Your First Class or Function"
+description: "A hands-on tutorial showing how to create and use mock objects in your tests with GoogleMock. Covers the basics of defining mocks, using EXPECT_CALL, ON_CALL, and verifying interactions."
 ---
 
-# Creating Your First Mock Object
+# Mocking Your First Class or Function
 
-## Workflow Overview
-
-**Task Description:**
-This guide walks you through creating your first mock object using GoogleMock. You will learn how to define a mock class from an existing interface, instantiate mock objects, set up default behaviors and expectations, and verify mock interactions through a realistic, practical example.
-
-**Prerequisites:**
-- GoogleTest and GoogleMock must be installed and properly configured.
-- Basic understanding of C++ interfaces and virtual functions.
-- Familiarity with compiling and running GoogleTest/GoogleMock tests.
-
-**Expected Outcome:**
-By completing this guide, you will have a working mock class and tests that demonstrate setting default actions, defining expectations, and verifying expected interactions.
-
-**Time Estimate:**
-Approximately 15-20 minutes.
-
-**Difficulty Level:**
-Beginner to Intermediate
+Welcome to this hands-on tutorial that guides you through creating and using mock objects in your tests with GoogleMock. This guide covers everything you need to start mocking classes or functions — from defining mock classes to setting up expectations, specifying default behaviors, and verifying how your mock objects interact during tests.
 
 ---
 
-## Step-by-Step Instructions
+## What You Will Achieve
 
-### Step 1: Define a Mock Class
+By following this guide, you will:
 
-Start by creating a mock class that inherits from the interface you want to mock. For each virtual method (including destructors that must be virtual), use the `MOCK_METHOD` macro to define a mocked method. Place all mock method declarations in the `public:` section.
+- Understand how to define mock classes using `MOCK_METHOD`.
+- Learn the difference and use cases of `EXPECT_CALL` vs. `ON_CALL`.
+- Set up expectations on mock methods, including call count and argument matching.
+- Customize the behavior of mock functions with actions.
+- Verify interactions automatically and use ordering constraints to control call sequences.
+
+This guide assumes you have GoogleTest and GoogleMock installed and properly configured (see Installation Instructions and Prerequisites).
+
+---
+
+## Prerequisites
+
+- Basic understanding of C++ virtual classes and inheritance.
+- GoogleTest and GoogleMock installed (refer to [Installation Instructions](/getting-started/setup-basics/installation)).
+- Your project set up to include `<gmock/gmock.h>` and link against GoogleMock libraries.
+
+---
+
+# Getting Started with Mocking
+
+Mock objects simulate real objects for testing. They implement the same interfaces but allow you to set expectations about how their methods are called, and what they should return or do.
+
+GoogleMock offers a rich, expressive syntax to create, configure, and verify mocks effortlessly.
+
+---
+
+## 1. Define Your Mock Class
+
+Begin by creating a mock class that inherits from the interface or base class you plan to mock. Use the `MOCK_METHOD` macro to declare mock methods.
+
+### Syntax of MOCK_METHOD
 
 ```cpp
-#include <gmock/gmock.h>  // Include GoogleMock headers
-
-// Example base interface
-class Foo {
- public:
-  virtual ~Foo() = default;  // Destructor must be virtual
-  virtual int GetSize() const = 0;  // Pure virtual method
-  virtual std::string Describe(const char* name) = 0;  // Overloaded method
-  virtual std::string Describe(int type) = 0;
-  virtual bool Process(Bar elem, int count) = 0;
-};
-
-// Corresponding mock class
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(std::string, Describe, (const char* name), (override));
-  MOCK_METHOD(std::string, Describe, (int type), (override));
-  MOCK_METHOD(bool, Process, (Bar elem, int count), (override));
-};
+MOCK_METHOD(return_type, method_name, (arg_types...), (optional_qualifiers));
 ```
 
-**Note:**
-- Make sure the destructor in the base interface is virtual to avoid undefined behavior.
-- Use `(const, override)` if mocking a `const` method.
-- For overloaded methods, declare all variants you want to mock.
+- Place `MOCK_METHOD` declarations in the `public:` section of your mock, regardless of whether the base method is public, protected, or private.
+- For overriding `const` methods, add `(const, override)` as qualifiers.
+- If overriding `virtual` methods, always add `(override)`.
 
----
+### Examples
 
-### Step 2: Instantiate Mock Objects
-
-Create instances of your mock class in the test code. You can instantiate them on the stack or heap depending on your testing needs.
-
-```cpp
-TEST(FooTest, UsesMock) {
-  MockFoo mock_foo;  // Stack allocation
-
-  // Now you can set behaviors and expectations on mock_foo
-}
-```
-
----
-
-### Step 3: Set Default Actions with `ON_CALL`
-
-`ON_CALL` allows you to specify default behaviors for mock methods that will run when those methods are called without explicit expectations. This is useful for setting global behavior shared across calls.
-
-```cpp
-using ::testing::Return;
-using ::testing::_;  // Wildcard matcher
-
-ON_CALL(mock_foo, GetSize())
-    .WillByDefault(Return(42));
-```
-
-After this, calling `mock_foo.GetSize()` will return `42` by default.
-
----
-
-### Step 4: Set Expectations with `EXPECT_CALL`
-
-Set expectations on how the mock methods should be used in your tests. Define argument matchers, expected call counts, and return values or actions.
-
-```cpp
-EXPECT_CALL(mock_foo, Describe("example"))
-    .Times(1)
-    .WillOnce(Return("Mocked description"));
-
-EXPECT_CALL(mock_foo, Process(_, 5))
-    .WillRepeatedly(Return(true));
-```
-
-**Tips:**
-- Use `Times(0)` to verify that a method is *never* called.
-- The order of `EXPECT_CALL` statements matters: later expectations override earlier ones if they match.
-
----
-
-### Step 5: Exercise Your Code and Observe
-
-Run the code that uses your mock object. GoogleMock will automatically verify whether the expectations are satisfied when the mock object is destroyed or tests complete.
-
-```cpp
-// Example usage
-FooUser user(&mock_foo);
-EXPECT_TRUE(user.DoWork());  // Your code under test
-```
-
----
-
-### Step 6: Verify and Clean Up (Optional)
-
-You can explicitly verify expectations and clear them before mock destruction if needed.
-
-```cpp
-using ::testing::Mock;
-
-// Verifies expectations and clears them.
-bool verified = Mock::VerifyAndClearExpectations(&mock_foo);
-EXPECT_TRUE(verified);
-```
-
-Avoid setting new expectations after calling this.
-
----
-
-## Example: Complete Mock Usage
+Mocking a simple interface:
 
 ```cpp
 #include <gmock/gmock.h>
-#include <gtest/gtest.h>
-
-class Bar {};
 
 class Foo {
  public:
   virtual ~Foo() = default;
   virtual int GetSize() const = 0;
   virtual std::string Describe(const char* name) = 0;
-  virtual bool Process(Bar elem, int count) = 0;
 };
 
 class MockFoo : public Foo {
  public:
   MOCK_METHOD(int, GetSize, (), (const, override));
   MOCK_METHOD(std::string, Describe, (const char* name), (override));
-  MOCK_METHOD(bool, Process, (Bar elem, int count), (override));
+};
+```
+
+Mocking a class template:
+
+```cpp
+template <typename T>
+class StackInterface {
+ public:
+  virtual ~StackInterface() = default;
+  virtual int GetSize() const = 0;
+  virtual void Push(const T& x) = 0;
 };
 
-TEST(MockFooTest, BasicUsage) {
-  MockFoo mock;
+template <typename T>
+class MockStack : public StackInterface<T> {
+ public:
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(void, Push, (const T& x), (override));
+};
+```
 
-  // Set a default action
-  ON_CALL(mock, GetSize()).WillByDefault(::testing::Return(10));
+### Handling Types with Commas
 
-  // Set expectations
-  EXPECT_CALL(mock, Describe("test"))
-      .Times(2)
-      .WillRepeatedly(::testing::Return(std::string("desc")));
+If your return or argument types contain commas (e.g., `std::pair<bool, int>`), wrap them in parentheses or define type aliases, like this:
 
-  EXPECT_CALL(mock, Process(::testing::_, 5))
-      .WillOnce(::testing::Return(true));
-
-  // Exercising the mock
-  EXPECT_EQ(10, mock.GetSize());  // Uses ON_CALL's default
-  EXPECT_EQ("desc", mock.Describe("test"));
-  EXPECT_EQ("desc", mock.Describe("test"));
-  Bar bar;
-  EXPECT_TRUE(mock.Process(bar, 5));
-}
+```cpp
+using BoolAndInt = std::pair<bool, int>;
+class MyMock {
+ public:
+  MOCK_METHOD((BoolAndInt), GetPair, ());
+};
 ```
 
 ---
 
-## Tips & Best Practices
+## 2. Create Mock Objects
 
-- **Define all mock methods as `public`:** Even if the base class methods are protected or private, this is required to use `ON_CALL` and `EXPECT_CALL`.
-- **Use `NiceMock`, `NaggyMock`, or `StrictMock` judiciously:** These templates modify how uninteresting calls are treated, helping suppress warnings or enforce strict checking.
-- **Be mindful when mocking overloaded methods:** Always declare all variants you plan to use, or suppress warnings by using `using Base::MethodName;` for those not mocked.
-- **Avoid over-specifying expectations:** Use `ON_CALL` for default behavior, `EXPECT_CALL` only when you want to verify specific interactions.
-- **Call `Mock::VerifyAndClearExpectations` only once:** Do not set new expectations after verification; it leads to undefined behavior.
+Once your mock class is ready, instantiate mock objects in your tests like any other class.
 
----
+```cpp
+MockFoo mock_foo;
+```
 
-## Troubleshooting
+You can also use special wrappers for different strictness levels on uninteresting calls:
 
-- **Test fails because mock calls don't match expectations:**
-  - Check argument matchers and call counts.
-  - Use `--gmock_verbose=info` flag to trace calls and expectation matching.
+- `NiceMock<T>`: suppresses warnings for calls without expectations.
+- `NaggyMock<T>`: default behavior; shows warnings.
+- `StrictMock<T>`: treats uninteresting calls as errors.
 
-- **Warning about uninteresting calls:**
-  - Set default actions with `ON_CALL` or use `NiceMock` to suppress.
-  - Add a catch-all `EXPECT_CALL(mock, Method(_)).Times(AnyNumber());` if needed.
+Example:
 
-- **Mock methods call real functions:**
-  - Ensure base class methods are `virtual`.
-  - If mocking non-virtual functions, see [mocking non-virtuals](docs/gmock_cook_book.md#MockingNonVirtualMethods).
+```cpp
+using ::testing::NiceMock;
+NiceMock<MockFoo> nice_mock;
+```
 
-- **Compilation errors when using `MOCK_METHOD` with types containing commas:**
-  - Wrap these types in extra parentheses or define type aliases.
+> Tip: Use `NiceMock` for less noisy tests during development and `StrictMock` when you want to enforce strict interaction contracts.
 
 ---
 
-## Next Steps & Related Content
+## 3. Specify Default Behavior with `ON_CALL`
 
-- **Writing Your First Unit Test:** Learn how to write tests that use mocks [guide](../getting-started/first-unit-test).
-- **Mocking Techniques & Best Practices:** Deepen your understanding of mocking patterns [guide](../guides/essential-testing-patterns/mocking-best-practices).
-- **Feature Overview:** Review core GoogleMock features and capabilities [overview](../overview/concepts-features-usecases/feature-overview).
+`ON_CALL` allows you to define the default behavior of a mocked method when it is called but you do **not** require or expect the call.
 
-For more hands-on examples and advanced customization, check the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html).
+### Syntax
+
+```cpp
+ON_CALL(mock_object, Method(matchers))
+    .With(multi_argument_matcher) // optional
+    .WillByDefault(action);
+```
+
+- The `.With()` clause is optional and restricts matching to argument tuples as a whole.
+- The `.WillByDefault()` clause **must** appear exactly once and defines what the method returns or does by default.
+- Actions can be built-in like `Return(value)`, lambdas, or function pointers.
+
+### Example
+
+```cpp
+using ::testing::Return;
+using ::testing::_;
+
+ON_CALL(mock_foo, GetSize())
+    .WillByDefault(Return(10));
+
+ON_CALL(mock_foo, Describe(_))
+    .WillByDefault([](const char* name) {
+      return std::string("Hello, ") + name;
+    });
+```
+
+### Notes
+
+- Default actions will *only* run if no matching `EXPECT_CALL` matches the call.
+- You can override them per test or per expectation.
 
 ---
+
+## 4. Set Expectations with `EXPECT_CALL`
+
+`EXPECT_CALL` not only defines the behavior of a mock method but also sets an expectation that the method will be called with given arguments, number of times, and order.
+
+### Syntax
+
+```cpp
+EXPECT_CALL(mock_object, Method(matchers))
+    .With(multi_argument_matcher) // optional
+    .Times(cardinality)           // optional
+    .InSequence(sequence1, ...)   // optional
+    .After(expectation_or_set)    // optional
+    .WillOnce(action)             // may appear multiple times
+    .WillRepeatedly(action)       // optional
+    .RetiresOnSaturation()        // optional
+;
+```
+
+- Matchers specify argument expectations (wildcards: `_`, comparison matchers, custom matchers).
+- `Times()` controls how many times the call should occur. Omitting it causes gMock to infer the cardinality.
+- `InSequence()` enforces call order based on one or more `Sequence` objects.
+- `After()` constrains a call to happen after others.
+- `WillOnce()` defines behavior for specific calls in order.
+- `WillRepeatedly()` defines behavior after all `WillOnce()` calls are exhausted.
+- `RetiresOnSaturation()` tells gMock to retire the expectation as soon as it has been fully satisfied — useful for non-sticky expectations.
+
+### Basic Examples
+
+Single call expected:
+
+```cpp
+EXPECT_CALL(mock_foo, GetSize())
+    .WillOnce(Return(42));
+```
+
+Multiple calls with sequence:
+
+```cpp
+using ::testing::InSequence;
+InSequence seq;
+
+EXPECT_CALL(mock_foo, Begin());
+EXPECT_CALL(mock_foo, Process(_)).Times(3);
+EXPECT_CALL(mock_foo, End());
+```
+
+Catch-all expectation with unlimited calls:
+
+```cpp
+EXPECT_CALL(mock_foo, Describe(_)).Times(::testing::AnyNumber());
+```
+
+### Ordering and Partial Ordering
+
+- Default: expectations can match in any order.
+- Use `InSequence` to require strict sequential order.
+- Use `After` to build flexible partial orders.
+
+### Stickiness of Expectations
+
+Expectations by default remain active (sticky) after saturation.
+Use `.RetiresOnSaturation()` to make them inactive upon saturation. This is essential to prevent failing tests when multiple similar calls are expected.
+
+---
+
+## 5. Techniques for Mocking
+
+### Suppressing Warnings on Uninteresting Calls
+
+If you don't care about certain methods, you can:
+
+- Omit any `EXPECT_CALL` or `ON_CALL` and accept default behavior (may show warnings).
+- Use `NiceMock` to suppress warnings for the entire mock.
+- Explicitly allow calls with `EXPECT_CALL(...).Times(AnyNumber())` to silence specific methods.
+
+### Matching Arguments
+
+- Use built-in matchers (e.g., `Eq()`, `Gt()`, `_` (wildcard)) to specify argument expectations.
+- Combine matchers for complex argument requirements with `AllOf()`, `AnyOf()`, `Not()`, etc.
+- Use `.With()` to combine multiple arguments into a single tuple matcher.
+
+### Setting Actions
+
+Beyond simple returns, specify custom actions:
+
+- `Return(value)`, `ReturnRef(variable)`, `ReturnPointee(pointer)`.
+- Lambdas or callable objects as actions.
+- `DoAll()` for multiple side effects.
+- Output argument modification with `SetArgPointee<N>(value)` and `SetArrayArgument<N>(begin, end)`.
+
+### Delegation
+
+- Delegate calls to a fake or real object using `ON_CALL(...).WillByDefault(...)` with a lambda.
+- Call parent class's concrete method in actions to preserve original behavior.
+
+### Complex Expectations
+
+- Use `Sequence` and `InSequence` to specify order.
+- Combine multiple expectations with `After` or an `ExpectationSet`.
+
+### Verifying and Clearing Mocks
+
+GoogleMock automatically verifies expectations on mock destruction. You can force verification earlier with:
+
+```cpp
+Mock::VerifyAndClearExpectations(&mock_obj);
+```
+
+To reset both expectations and default actions:
+
+```cpp
+Mock::VerifyAndClear(&mock_obj);
+```
+
+You can allow a mock to be leaked (not verified) with:
+
+```cpp
+Mock::AllowLeak(&mock_obj);
+```
+
+---
+
+## 6. Practical Example: Mocking and Using Expectations
+
+Here's a complete sample demonstrating the basics:
+
+```cpp
+#include <gmock/gmock.h>
+#include <gtest/gtest.h>
+
+using ::testing::Return;
+using ::testing::_;
+using ::testing::InSequence;
+
+class MyInterface {
+ public:
+  virtual ~MyInterface() = default;
+  virtual int Add(int x, int y) = 0;
+  virtual void Print(const std::string& text) = 0;
+};
+
+class MockMyInterface : public MyInterface {
+ public:
+  MOCK_METHOD(int, Add, (int x, int y), (override));
+  MOCK_METHOD(void, Print, (const std::string& text), (override));
+};
+
+TEST(MockExample, BasicUsage) {
+  MockMyInterface mock;
+
+  // Set default behavior
+  ON_CALL(mock, Add(_, _)).WillByDefault(Return(0));
+
+  // Set expectations
+  EXPECT_CALL(mock, Add(1, 2))
+      .Times(1)
+      .WillOnce(Return(3));
+
+  EXPECT_CALL(mock, Print(_))
+      .Times(::testing::AnyNumber());
+
+  // Exercise the mock
+  EXPECT_EQ(mock.Add(1, 2), 3);
+  mock.Print("hello");
+  mock.Print("world");
+}
+```
+
+Outcome:
+- `Add(1, 2)` is expected exactly once to return 3.
+- Any call to `Print` is allowed any number of times.
+- Any other `Add` calls will return 0 by default.
+
+---
+
+## 7. Troubleshooting & Best Practices
+
+### Common Issues
+
+- **Uninteresting call warnings**: Usually indicate that `EXPECT_CALL` was not set for this method. Consider using `NiceMock` or add `EXPECT_CALL(...).Times(AnyNumber())` if intentionally ignored.
+- **Unexpected calls**: A call matches no expectation—either fix expectation or the test logic.
+- **Too many or too few calls**: Check `Times()` clause carefully; use `.RetiresOnSaturation()` for non-sticky expectations.
+- **Ambiguous overloads**: Specify argument matchers or use `Const()` to disambiguate.
+
+### Tips for Success
+
+- Use `ON_CALL` to set common default behaviors in test fixtures; rely on `EXPECT_CALL` to verify important interactions sparingly.
+- Use `_` matcher for arguments you don't care about; over-specifying matchers leads to brittle tests.
+- Use sequences or `After` clauses to assert call order when necessary, but prefer loose ordering to avoid fragile tests.
+- Avoid mocking non-virtual methods directly; consider interface extraction or compile-time mocking.
+
+---
+
+## 8. Next Steps & Related Documentation
+
+- [Writing and Running Your First Test](/guides/getting-started/quickstart-testing): Learn how to get up and running with basic tests.
+- [Mocking Reference](/api-reference/mocking-framework/mock-objects-and-methods): In-depth technical reference on mocking APIs.
+- [Matchers Reference](/api-reference/actions-matchers-extensions/matchers-library-and-customization): Deep dive into argument matchers.
+- [Actions Reference](/api-reference/actions-matchers-extensions/action-templates-and-custom-actions): Explore how to customize mock behaviors.
+- [Organizing Tests and Test Suites](/guides/getting-started/test-structure): Manage and organize tests effectively.
+
+---
+
+Enjoy mocking your first class or function! Your mastery here unlocks powerful testing capabilities to ensure your code works correctly through expressive and maintainable tests.
+
+---
+
+<AccordionGroup title="Additional Resources and Tips">
+<Accordion title="Understanding Uninteresting vs Unexpected Calls">
+Great tests only add expectations for behaviors that matter. Use `ON_CALL` to set default behaviors, and `EXPECT_CALL` when you want to verify specific calls. Use `NiceMock` to suppress warnings from uninteresting calls.
+</Accordion>
+<Accordion title="Retiring Expectations to Avoid Sticky Failures">
+Use `.RetiresOnSaturation()` to disable an expectation after it is fully satisfied. This helps prevent errors when calls exceed expectations in loops or multiple invocations.
+</Accordion>
+<Accordion title="Ordering Calls with Sequences and After">
+Put related expectations inside an `InSequence` block to require order. For more complex partial orders, use `.After()` with `Expectation` or `ExpectationSet` to express dependencies.
+</Accordion>
+<Accordion title="Mocking Move-Only Types">
+GoogleMock supports mocking methods with move-only types like `std::unique_ptr<T>`. Use lambdas in `WillOnce()` or `WillRepeatedly()` to return fresh objects where needed.
+</Accordion>
+<Accordion title="Using Matchers Effectively">
+Use matchers like `_`, `Eq()`, `Ge()`, `Field()`, and custom matchers to make your expectations clear but flexible enough to avoid brittle tests.
+</Accordion>
+</AccordionGroup>
